--- a/index.html
+++ b/index.html
@@ -2,15 +2,40 @@
 <html>
 <head>
 	<title>My Website</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-	<h1>Welcome to my website!</h1>
-	<p>Here is some example content for my website. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt elit vel dapibus dignissim. Donec tincidunt nulla vel metus congue, id volutpat nunc bibendum. Nulla eget metus et tellus bibendum consequat.</p>
-	<ul>
-		<li>List item 1</li>
-		<li>List item 2</li>
-		<li>List item 3</li>
-	</ul>
-	<p>Thank you for visiting my website!</p>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">My Website</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contact</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container mt-5">
+		<h1>Welcome to my website!</h1>
+		<p>Here is some example content for my website. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt elit vel dapibus dignissim. Donec tincidunt nulla vel metus congue, id volutpat nunc bibendum. Nulla eget metus et tellus bibendum consequat.</p>
+		<ul>
+			<li>List item 1</li>
+			<li>List item 2</li>
+			<li>List item 3</li>
+		</ul>
+		<p>Thank you for visiting my website!</p>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
