--- a/index.html
+++ b/index.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>John Doe</title>
-	<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Personal Landing Page</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-Cz8mOnUpb1aBAQqhEV5H5e1q7d5NusXplnjiBM0z5St5rBxYk5THN8N0kSNWPUoJ" crossorigin="anonymous">
 </head>
 <body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="#about">About</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section id="hero">
-			<h1>John Doe</h1>
-			<p>Front-end Developer</p>
-		</section>
-		<section id="about">
-			<h2>About Me</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed lacus sit amet odio ultrices pretium sit amet vel magna.</p>
-		</section>
-		<section id="portfolio">
-			<h2>Portfolio</h2>
-			<ul>
-				<li><a href="#">Project 1</a></li>
-				<li><a href="#">Project 2</a></li>
-				<li><a href="#">Project 3</a></li>
-			</ul>
-		</section>
-		<section id="contact">
-			<h2>Contact Me</h2>
-			<form>
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name">
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email">
-				<label for="message">Message:</label>
-				<textarea id="message" name="message"></textarea>
-				<button type="submit">Send</button>
-			</form>
-		</section>
-	</main>
-	<footer>
-		<p>&copy; 2023 John Doe. All rights reserved.</p>
-	</footer>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">My Personal Landing Page</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <h1>Welcome to my personal landing page!</h1>
+    <p>This is where I'll showcase my skills, projects, and interests.</p>
+    <a href="#" class="btn btn-primary">Learn more</a>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-TiQoFNP7VrZtAiTN8s7F6tSq1JXVgSb0E+o7wFEmmIx1Sz/4TLZk+6hKp6Oe9+aD" crossorigin="anonymous"></script>
 </body>
 </html>
