--- a/index.html
+++ b/index.html
@@ -1,185 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Landing Page</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  </head>
-  <body>
-    <!-- Content goes here -->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">My Personal Landing Page</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <div class="jumbotron">
-  <div class="container">
-    <h1>Welcome to my Personal Landing Page</h1>
-    <p>I am a web developer with experience in creating beautiful and responsive websites.</p>
-    <a class="btn btn-primary btn-lg" href="#contact" role="button">Get in touch</a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Under Maintenance</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #f7f7f7;
+    }
+    .maintenance-container {
+      width: 60%;
+      margin: 100px auto;
+      text-align: center;
+      color: #555;
+    }
+    h1 {
+      font-size: 72px;
+      margin-top: 0;
+      margin-bottom: 30px;
+    }
+    p {
+      font-size: 24px;
+      margin-bottom: 50px;
+    }
+    .btn {
+      font-size: 18px;
+      padding: 12px 24px;
+    }
+  </style>
+</head>
+<body>
+  <div class="maintenance-container">
+    <h1>Under Maintenance</h1>
+    <p>Sorry, we are currently down for maintenance. We'll be back up and running shortly.</p>
+    <a href="#" class="btn btn-primary">Go to Homepage</a>
   </div>
-</div>
-
-                  <section id="services">
-  <div class="container">
-    <h2>Services</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="service-box">
-          <i class="fa fa-code"></i>
-          <h3>Web Development</h3>
-          <p>Creating beautiful and responsive websites using HTML, CSS, and JavaScript.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-box">
-          <i class="fa fa-mobile"></i>
-          <h3>Mobile Development</h3>
-          <p>Developing native mobile applications for Android and iOS platforms.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-box">
-          <i class="fa fa-cogs"></i>
-          <h3>Custom Solutions</h3>
-          <p>Providing custom software solutions tailored to your specific needs.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-                               <section id="portfolio">
-  <div class="container">
-    <h2>Portfolio</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="portfolio-item">
-          <a href="#">
-            <img src="img/portfolio-item-1.jpg" alt="">
-            <div class="portfolio-overlay">
-              <div class="portfolio-overlay-text">
-                <h3>Project Title</h3>
-                <p>Short project description goes here</p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="portfolio-item">
-          <a href="#">
-            <img src="img/portfolio-item-2.jpg" alt="">
-            <div class="portfolio-overlay">
-              <div class="portfolio-overlay-text">
-                <h3>Project Title</h3>
-                <p>Short project description goes here</p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="portfolio-item">
-          <a href="#">
-            <img src="img/portfolio-item-3.jpg" alt="">
-            <div class="portfolio-overlay">
-              <div class="portfolio-overlay-text">
-                <h3>Project Title</h3>
-                <p>Short project description goes here</p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-                                                 <section id="contact">
-  <div class="container">
-    <h2>Contact</h2>
-    <div class="row">
-      <div class="col-md-6">
-        <form action="#" method="post">
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-          </div>
-          <div class="form-group">
-            <label for="message">Message</label>
-            <textarea class="form-control" id="message" name="message" rows="6" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Send Message</button>
-        </form>
-      </div>
-      <div class="col-md-6">
-        <div class="contact-info">
-          <div class="address">
-            <i class="fa fa-map-marker"></i>
-            <h3>Address</h3>
-            <p>123 Main Street, New York, NY 10001</p>
-          </div>
-          <div class="phone">
-            <i class="fa fa-phone"></i>
-            <h3>Phone</h3>
-            <p>(123) 456-7890</p>
-          </div>
-          <div class="email">
-            <i class="fa fa-envelope"></i>
-            <h3>Email</h3>
-            <p>email@example.com</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-                                     <footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
-      </div>
-      <div class="col-md-6">
-        <ul class="social-icons">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer>
-
-    <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
