--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
       font-size: 18px;
       padding: 12px 24px;
     }
+    .maintenance-image {
+      max-width: 100%;
+      margin-bottom: 50px;
+    }
   </style>
 </head>
 <body>
   <div class="maintenance-container">
+    <img src="maintenance.png" alt="Maintenance Image" class="maintenance-image">
     <h1>Under Maintenance</h1>
     <p>Sorry, we are currently down for maintenance. We'll be back up and running shortly.</p>
     <a href="#" class="btn btn-primary">Go to Homepage</a>
