--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@ section#contact p {
   </section>
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: john@example.com</p>
+    <p>Email: email@example.com</p>
     <p>Phone: (123) 456-7890</p>
   </section>
 </body>
