--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <h1 class="mt-5">Contact Me</h1>
         <p>If you have any questions or inquiries, feel free to get in touch with me using the form below:</p>
 
-        <form action="submit_form.php" method="post">
+        <form action="https://saurabhsaud.000webhostapp.com/submit.php" method="post">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" class="form-control" id="name" name="name" required>
