--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <img src="maintenance.png" alt="Maintenance Image" class="maintenance-image">
     <h1>Under Maintenance</h1>
     <p>Sorry, we are currently down for maintenance. We'll be back up and running shortly.</p>
-    <a href="https://saurabhsaud.github.io/contact.html" class="btn btn-primary">Go to Homepage</a>
+    <a href="https://saurabhsaud.github.io/contact.html" class="btn btn-primary">Contact Us</a>
   </div>
 </body>
 </html>
