--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,25 @@ section#contact p {
   font-size: 18px;
   margin: 10px 0;
 }
+    .portfolio-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      padding: 20px;
+    }
+
+    .portfolio-item {
+      background-color: #f2f2f2;
+      border-radius: 5px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      margin: 15px;
+      padding: 20px;
+      width: calc(33.33% - 30px);
+    }
+
+    .portfolio-item h2 {
+      margin-top: 0;
+    }
 </style>
 </head>
 <body>
@@ -71,6 +90,20 @@ section#contact p {
     <h2>Portfolio</h2>
     <div class="projects">
       <!-- Your projects here -->
+          <div class="portfolio-container">
+        <div class="portfolio-item">
+          <h2>Project 1</h2>
+          <p>Description of Project 1.</p>
+        </div>
+        <div class="portfolio-item">
+          <h2>Project 2</h2>
+          <p>Description of Project 2.</p>
+        </div>
+        <div class="portfolio-item">
+          <h2>Project 3</h2>
+          <p>Description of Project 3.</p>
+        </div>
+      </div>
     </div>
   </section>
   <section id="contact">
